ui digest + task related fixes + indexing fixes for refetch and reindex (in case of files)